# ChangeLog for x11-base/x11-drm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/x11-drm/Attic/ChangeLog,v 1.71 2009/03/27 22:24:25 battousai Exp $

  27 Mar 2009; Bryan Stine <battousai@gentoo.org> x11-drm-20090320.ebuild:
  Removed nouveau.ko and nv VIDEO_CARDS flag. There are no supporting
  packages in the portage tree for those yet. Fixed linux-mod config check
  usage regression, bug #263259 (thanks kouyu). Added ewarn for the
  disappearance of the intel driver, which happened upstream. It's in the
  kernel now (thanks Andres Sandoval, comment in above bug).

*x11-drm-20090320 (20 Mar 2009)

  20 Mar 2009; Bryan Stine <battousai@gentoo.org> +x11-drm-20090320.ebuild:
  Bump to 20090320 with improved version from x11 overlay. Includes various
  minor ebuild fixes, radeonhd support, xgi support, and nouveau in favor of
  defunct nv module. Fixes bug #260728, thanks to Tanktalus.

  05 Feb 2009; Rémi Cardona <remi@gentoo.org> x11-drm-20080710.ebuild:
  disable tests since they require user intervention (see bug #236845)

  22 Jan 2009; Bryan D. Stine <battousai@gentoo.org>
  -x11-drm-20060608.ebuild, -x11-drm-20060608-r1.ebuild,
  x11-drm-20070314.ebuild, x11-drm-20071019.ebuild, x11-drm-20080710.ebuild:
  Push 20080710 patchball 0.5, restoring compatibility with kernel 2.6.28.
  Dropped old 20060608 snapshot. Rename I810_VIDCARDS to INTEL_VIDCARDS for
  consistency. 20080710-0.5 fixes bug #255956.

  02 Nov 2008; Markus Meier <maekke@gentoo.org> x11-drm-20070314.ebuild:
  amd64/x86 stable, bug #237876

  22 Oct 2008; Rémi Cardona <remi@gentoo.org> x11-drm-20060608.ebuild,
  x11-drm-20060608-r1.ebuild, x11-drm-20070314.ebuild,
  x11-drm-20071019.ebuild, x11-drm-20080710.ebuild:
  pkgmove from xf86-video-i810 to xf86-video-intel

  16 Oct 2008; Raúl Porcel <armin76@gentoo.org> x11-drm-20070314.ebuild:
  alpha/ia64 stable wrt #237876
