@@ -9,6 +9,6 @@ DIST x11-drm-20090320-gentoo-0.1.tar.bz2 2315 RMD160 af69ee43ed7fac23b81cdef3bbb
 EBUILD x11-drm-20070314.ebuild 8331 RMD160 b6c6b7d93f2e1d984b6e4a5eaccfcb364aec1486 SHA1 83d87ce1b90bd4a09354033270f64949bc57a439 SHA256 352222e6c1b975aa597035b7ba23a2eae8255ff1062efdf878d998078206dd25
 EBUILD x11-drm-20071019.ebuild 8315 RMD160 7f029741d57e04d90d32974d2dfb27e32c8d791f SHA1 d745f4f4d61de8378fe5d3cae73c8904fc88c241 SHA256 741518f60968843d8eb9f79967b4e225fb29ee5a2f0e0015c35c817717431965
 EBUILD x11-drm-20080710.ebuild 8323 RMD160 31f974ad00097ec60f0fc113d19ac7dcba8a4b54 SHA1 9cf8478d5c2199915ec49cb2cf6adf4b68859916 SHA256 b4ca6246c10bbcbb42744eabdb4a26f4364a1bf6b3e127557f88cbdeaf1df01e
-EBUILD x11-drm-20090320.ebuild 7364 RMD160 514091d89f03f6513ed7b642a038592277e206b6 SHA1 368516831fdc4f761b57b8441ada4b4bdaa63fa1 SHA256 e7a20e6863f00e66e957673550996dbf64e196329e50c445e99484c6669c7608
-MISC ChangeLog 28118 RMD160 27a899d26a42f7d1f4fd4bf52ddba171f0727ecf SHA1 1b3969b60c1e69026331797c59047348caea9c86 SHA256 eae42339d3a8b97a4d959ee81f76bd847c36aa05f68203c6f951de0cd179bcc2
+EBUILD x11-drm-20090320.ebuild 7173 RMD160 46f9a1d2df248a7c9cb82eb0b167598a5358c3e0 SHA1 cc0f8997dca576db39de071dd02a70ce83066ff8 SHA256 d56a6058cae0eaaaecf612e39512587762d31e5d799d9cc9fbe777a159b584a0
+MISC ChangeLog 28262 RMD160 b53cb05561710fb91cafdd8667c6df7b758fdf4a SHA1 d0aa2ac0f0beb98508a24f4fed71949e3cfce07b SHA256 ba06b85d7e678b6f61d2cb26950601b24446f67f144bb71aa1991e2bb64fa7bb
 MISC metadata.xml 368 RMD160 cbe279aeafeae0af3633fbd1ecaa59d2f54579b8 SHA1 5104adf2f1ebe1ddffe4ca95e7b5e5f06267f842 SHA256 e73a5c428f39881de8ae5acf40958e8ad37a5fe92c2bb8cc4060704c9be45ef1
