@@ -1,6 +1,9 @@
 # ChangeLog for x11-base/x11-drm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/x11-drm/Attic/ChangeLog,v 1.71 2009/03/27 22:24:25 battousai Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/x11-drm/Attic/ChangeLog,v 1.72 2009/03/28 00:34:08 battousai Exp $
+
+  28 Mar 2009; Bryan Stine <battousai@gentoo.org> x11-drm-20090320.ebuild:
+  Remove unneeded AGP and (useless) extra DRM kernel config checks.
 
   27 Mar 2009; Bryan Stine <battousai@gentoo.org> x11-drm-20090320.ebuild:
   Removed nouveau.ko and nv VIDEO_CARDS flag. There are no supporting
